# adjutant-ui

./: .gitignore  .gitreview  .testr.conf  .zuul.yaml  AUTHORS~  CONTRIBUTING.rst  MANIFEST.in  MANIFEST.in~  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.cfg~  setup.py  test-requirements.txt  tox.ini
adjutant_ui/: version.py
adjutant_ui/api/: adjutant.py
adjutant_ui/content/default/: panel.py
adjutant_ui/content/email/: forms.py  panel.py  urls.py  views.py
adjutant_ui/content/email/templates/email/: _change.html  change.html
adjutant_ui/content/forgot_password/: forms.py  panel.py  urls.py  views.py
adjutant_ui/content/forgot_password/templates/auth/: _login_page.html
adjutant_ui/content/notifications/: panel.py  tables.py  tabs.py  urls.py  views.py
adjutant_ui/content/project_users/: forms.py  panel.py  tables.py  urls.py  utils.py  views.py
adjutant_ui/content/quota/: forms.py  panel.py  tables.py  urls.py  views.py
adjutant_ui/content/signup/: forms.py  panel.py  urls.py  views.py
adjutant_ui/content/tasks/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
adjutant_ui/content/tasks/templatetags/: task_filters.py
adjutant_ui/content/token/: forms.py  panel.py  urls.py  views.py
adjutant_ui/dashboards/: forgot_password_dash.py  management.py  signup_dash.py  token_dash.py
adjutant_ui/enabled/: _6000_management.py  _6001_adjutant_base.py  _6010_token.py  _6015_forgot_password.py  _6020_management_access_control_group.py  _6021_management_project_users.py  _6025_signup.py  _6070_settings_update_email.py  _6080_management_quota.py  _6090_management_task_list.py  _6100_management_notification_list.py
adjutant_ui/templates/auth/: _login_page.html
adjutant_ui/templatetags/: relabel_username_field.py
adjutant_ui/test/: helpers.py  settings.py
adjutant_ui/test/api_tests/: test_rest_api.py
adjutantclient/: __init__.py  _i18n.py  client.py  exc.py
adjutantclient/common/: base.py  http.py
adjutantclient/osc/: plugin.py
adjutantclient/osc/v1/: notifications.py  signup.py  status.py  tasks.py  tokens.py  users.py
adjutantclient/v1/: __init__.py  client.py  notifications.py  roles.py  signup.py  status.py  tasks.py  tokens.py  users.py
doc/source/: conf.py  configuration.rst  index.rst  installation.rst
doc/source/releases/: 0.1.0.rst
releasenotes/notes/: drop-older-python-support-ed46e350486b2f48.yaml
stacktask_ui/: version.py
stacktask_ui/api/: stacktask.py
stacktask_ui/content/default/: panel.py
stacktask_ui/content/forgot_password/: forms.py  panel.py  urls.py  views.py
stacktask_ui/content/project_users/: forms.py  panel.py  tables.py  urls.py  views.py
stacktask_ui/content/tasks/: forms.py  tables.py  tabs.py  urls.py  views.py
stacktask_ui/content/token/: panel.py  urls.py  views.py
stacktask_ui/dashboards/: forgot_password_dash.py  management.py  token_dash.py
stacktask_ui/enabled/: _6000_management.py  _6001_stacktask_base.py  _6020_token.py  _6021_management_project_users.py  _6030_forgot_password.py  _6090_management_task_list.py
stacktask_ui/templates/auth/: _login_page.html
stacktask_ui/test/: helpers.py  settings.py
stacktask_ui/test/api_tests/: rest_api_tests.py
stacktaskclient/: __init__.py  client.py  exc.py  shell.py
stacktaskclient/common/: deployment_utils.py  environment_format.py  event_utils.py  http.py  template_format.py  template_utils.py  utils.py
stacktaskclient/openstack/common/: _i18n.py  cliutils.py
stacktaskclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
stacktaskclient/osc/: plugin.py
stacktaskclient/osc/v1/: notifications.py  signup.py  status.py  tasks.py  tokens.py  users.py
stacktaskclient/v1/: __init__.py  build_info.py  client.py  notifications.py  roles.py  shell.py  signup.py  status.py  tasks.py  tokens.py  users.py
tools/: install_venv.py
(+45 files in other folders)
