[metadata]
name = adjutant-ui
summary = Adjutant User Interface
description-file =
    README.rst
author = Adrian Turjak
author-email = adriant@catalyst.net.nz
home-page = https://github.com/catalyst/adjutant-ui
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    adjutant_ui
